<resources>
    <string name="app_name">Movie App</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="send_to">Send to</string>
    <string name="skip">Skip</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="sing_out">Sign out</string>
    <string name="button_add">Add movie</string>

    <!--id for facebook app-->
    <string name="facebook_app_id">355059124854709</string>

</resources>
